--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <main class="container">
         <div class="row">
             <div class="col-12 mt-4 text-center">
+                <a href="proyectos.html"></a>
                 <img src="images/cohete.svg" class="cohete">
+                </a>
             </div>
         </div>
         <div class="row">
