--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </header>
     <main class="container">
         <div class="row">
-            <div class="col-12 mt-4 text-center">
-                <a href="proyectos.html"></a>
+            <div class="col-12 mt-4 text-center div-cohete">
+                <a href="proyectos.html">
                 <img src="images/cohete.svg" class="cohete">
                 </a>
             </div>
