--- a/proyectos.html
+++ b/proyectos.html
@@ -110,9 +110,9 @@
     <footer class="container">
         <div class="row mt-5 pb-4">
             <div class="col-12 col-sm-3">
-                <a href="https://github.com" target="blank">
+                <a href="https://github.com" target="blank" class="a-brand">
                     <i class="fa-brands fa-github px-2"></i></a>
-                <a href="https://linkedin.com" target="blank">
+                <a href="https://linkedin.com" target="blank" class="a-brand">
                     <i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <div class="col-3">Sponsor <a href="https://depcsuite.com/?v=d72a48a8ebd2" target="blank">DePC Suite</a>
