--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -43,3 +43,16 @@
             </div>
         </nav>
     </header>
+    <main class="container">
+        <div class="row">
+            <div class="col-12 pt-3 pb-5">
+                <h1>Sobre Mí</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p class="pb-5">Apasionado por la tecnología y gestión de proyectos. Estoy cursando Full Stack en DePc Suite.</p>
+                <a href="" target="blank" class="btn btn-rojo">Enviar mensaje</a>
+            </div>
+        </div>
+    </main>
