--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -50,9 +50,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
-                <p class="pb-5">Apasionado por la tecnología y gestión de proyectos. Estoy cursando Full Stack en DePc Suite.</p>
+            <div class="col-sm-6 col-12 mt-4">
+                <p class="pb-5">Apasionado por la tecnología y gestión de proyectos. Actualmente estoy cursando Desarrollo Web Full Stack en DePc Suite.</p>
                 <a href="" target="blank" class="btn btn-rojo">Enviar mensaje</a>
+            </div>
+            <div class="col-sm-3 col-12 mt-4 offset-sm-2">
+                <img src="images/aitor ibarra-12.jpg" alt="Aitor Ibarra" title="Aitor Ibarra" class="imagen-portfolio">
             </div>
         </div>
     </main>
