--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -52,10 +52,32 @@
         <div class="row">
             <div class="col-sm-6 col-12 mt-4">
                 <p class="pb-5">Apasionado por la tecnología y gestión de proyectos. Actualmente estoy cursando Desarrollo Web Full Stack en DePc Suite.</p>
-                <a href="" target="blank" class="btn btn-rojo">Enviar mensaje</a>
+                <a href="contacto.html" target="blank" class="btn btn-rojo">Enviar mensaje</a>
             </div>
             <div class="col-sm-3 col-12 mt-4 offset-sm-2">
                 <img src="images/aitor ibarra-12.jpg" alt="Aitor Ibarra" title="Aitor Ibarra" class="imagen-portfolio">
             </div>
         </div>
     </main>
+    <footer class="container">
+        <div class="row mt-5 pb-4">
+            <div class="col-12 col-sm-3">
+                <a href="https://github.com" target="blank">
+                    <i class="fa-brands fa-github px-2"></i></a>
+                <a href="https://linkedin.com" target="blank">
+                    <i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+            <div class="col-3">Sponsor <a href="https://depcsuite.com/?v=d72a48a8ebd2" target="blank">DePC Suite</a>
+            </div>
+            <div class="col-3"><a href="mailto:aitor.ibarra31@gmail.com">aitor.ibarra31@gmail.com</a></div>
+
+        </div>
+
+    </footer>
+    <div class="whatsapp pt-3 pb-4 px-3">
+        <a href="https://api.whatsapp.com/send?phone=542262630504" target="blank">
+            <i class="fa-brands fa-whatsapp"></i></a>
+    </div>
+</body>
+
+</html>
